tests/paczka1/fuzzy1/58175434.err
Error in line 1: qgPIIC A664 63,5
Error in line 12: S521 S521 30,6
Error in line 17: S521 A664 200,36
Error in line 14: S521 A664 45,6
Error in line 28: 4Y80Mnsx S860 73,4
Error in line 20: R3DCF A456 65,1
